force-app/main/default/objects/Academic_Year__c/Academic_Year__c.object-meta.xml
<CustomObject>
    <label>Academic Year</label>
    <nameField>
        <displayFormat>AY-{000000}</displayFormat>
        <label>Academic Year</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Academic Years</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>