force-app/main/default/objects/Academic_Year__c/fields/Academic_year__c.field-meta.xml
<CustomField>
    <fullName>Academic_year__c</fullName>
    <label>Academic Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Academic_Year</valueSetName>
    </valueSet>
</CustomField>