force-app/main/default/objects/Academic_Year__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Academic Years</relationshipLabel>
    <relationshipName>Academic_Years</relationshipName>
    <type>Lookup</type>
</CustomField>