force-app/main/default/objects/Academic_Year__c/fields/Hall_Ticket_No__c.field-meta.xml
<CustomField>
    <fullName>Hall_Ticket_No__c</fullName>
    <label>Hall Ticket No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>