force-app/main/default/objects/Academic_Year__c/fields/Sem__c.field-meta.xml
<CustomField>
    <fullName>Sem__c</fullName>
    <label>Sem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sem</valueSetName>
    </valueSet>
</CustomField>