force-app/main/default/objects/Academic_Year__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Academic Years</relationshipLabel>
    <relationshipName>Academic_Years</relationshipName>
    <type>Lookup</type>
</CustomField>