force-app/main/default/objects/Academic_Year__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course__c</columns>
    <columns>Year__c</columns>
    <columns>Sem__c</columns>
    <columns>Student__c</columns>
    <columns>Academic_year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>